--- a/index.html
+++ b/index.html
@@ -1,60 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Calculator</title>
-</head>
-<body>
-  <div class="body-wrap">
-    <header class="header">
-      <div class="logo-wrap">
-        <h1 class="h1">calc</h1>
-      </div>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Spartan:wght@700&display=swap"
+      rel="stylesheet"
+    />
 
-      <div class="theme-wrap">
-        <p>theme</p>
-        <div>
-          <span>1</span>
-          <span>2</span>
-          <span>3</span>
-          <div class="theme-toggle">
-            <div class="toggle-ball"></div>
-          </div>
-      
+    <link rel="stylesheet" href="css/index.css" />
+
+    <title>Calculator</title>
+  </head>
+  <body class="body">
+    <div class="body-wrap">
+      <header class="header">
+        <div class="logo-wrap">
+          <h1 class="logo">calc</h1>
         </div>
-      </div>
-      
-    </header>
 
-    <main class="main">
-      <section class="calc-screen"></section>
+        <div class="theme-wrap">
+          <p class="theme caps">theme</p>
+          <div class="toggle">
+            <div class="toggle-spans">
+              <span class="span theme-one">1</span>
+              <span class="span theme-two">2</span>
+              <span class="span theme-three">3</span>
+            </div>
+            <div class="toggle-bar">
+              <div class="toggle-ball"></div>
+            </div>
+          </div>
+        </div>
+      </header>
 
-      <section class="calc-body">
-        <button class="btn num">7</button>
-        <button class="btn num">8</button>
-        <button class="btn num">9</button>
-        <button class="btn delete">del</button>
-        <button class="btn num">4</button>
-        <button class="btn num">5</button>
-        <button class="btn num">6</button>
-        <button class="btn add">+</button>
-        <button class="btn num">1</button>
-        <button class="btn num">2</button>
-        <button class="btn num">3</button>
-        <button class="btn subtract">-</button>
-        <button class="btn decimal">.</button>
-        <button class="btn num">0</button>
-        <button class="btn divide">/</button>
-        <button class="btn multiply">x</button>
-        <button class="btn reset">reset</button>
-        <button class="btn equals">=</button>
-      </section>
+      <main class="calc-main">
+        <section class="calc-screen"></section>
 
-    </main>
-  </div>
-</body>
+        <section class="calc-body caps">
+          <button class="btn num">7</button>
+          <button class="btn num">8</button>
+          <button class="btn num">9</button>
+          <button class="btn caps delete">del</button>
+          <button class="btn num">4</button>
+          <button class="btn num">5</button>
+          <button class="btn num">6</button>
+          <button class="btn add">+</button>
+          <button class="btn num">1</button>
+          <button class="btn num">2</button>
+          <button class="btn num">3</button>
+          <button class="btn subtract">-</button>
+          <button class="btn decimal">.</button>
+          <button class="btn num">0</button>
+          <button class="btn divide">/</button>
+          <button class="btn multiply">x</button>
+          <button class="btn caps reset">reset</button>
+          <button class="btn equals">=</button>
+        </section>
+      </main>
+    </div>
+  </body>
 </html>
