--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
       </header>
 
       <main class="calc-main">
-        <section class="calc-screen"></section>
+        <section class="calc-screen mid-curve"></section>
 
-        <section class="calc-body caps">
+        <section class="calc-body caps mid-curve">
           <button class="btn num">7</button>
           <button class="btn num">8</button>
           <button class="btn num">9</button>
